refactor : login code and check with swagger is working
